--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ body{
 table{
 border:1px solid black;
 margin :auto ;
-width :98%;
+width :340px;
 text-align :center ;
 margin-top :70px ;
 border :2px solid black ;
